--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -10,3 +10,11 @@ h1 {
     color: white;
     font-size: 40px;
 }
+
+.logo {
+    background-image: url("../assets/webpack-logo.png ");
+    background-size: cover;
+    height: 200px;
+    width: 200px;
+    margin: 0 auto;
+}
